--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,38 @@
 // Specific CSS for your home-page
+.questions-container {
+  border-radius: 10px;
+  border: 5px solid #ECCD01;
+  height: 45vh;
+  background: black;
+  font-size: 24px;
+  color: #ECCD01;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.question-content {
+  padding: 16px;
+  text-align: center;
+}
+
+.next-question-button {
+  border: 5px solid black;
+  border-radius: 10px;
+  height:10vh;
+  background-color: #ECCD01;
+  margin-top: 96px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  cursor: pointer;
+  a {
+    color: black;
+    text-align: center;
+    width: 100%;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
