--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to "#", class: "navbar-brand" do %>
-  <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+  <%= image_tag("logo.png") %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,17 +11,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-      <li class="nav-item active">
+      <li class="nav-item <%= 'active' if params[:controller] == 'pages' && params[:action] == 'home' %>">
         <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
-      <li>
+      <li class="nav-item <%= 'active' if params[:controller] == 'admin' && params[:action] == 'show' %>">
         <%= link_to "Admin", admin_path, class: "nav-link" %>
       </li>
-      <li>
+      <li class="nav-item">
         <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
       </li>
       <% else %>
-      <li class="nav-item">
+      <li class="nav-item <%= 'active' if params[:controller] == 'devise/sessions' && params[:action] == 'new' %>">
         <%= link_to "Login", new_user_session_path, class: "nav-link" %>
       </li>
       <% end %>
