changed font color

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
   height: 45vh;
   background: black;
   font-size: 24px;
-  color: #ECCD01;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
